[gd_scene load_steps=25 format=2]

[ext_resource path="res://gui/screens/settings/input_menu/input_mapper/scenes/InputMapper.tscn" type="PackedScene" id=1]
[ext_resource path="res://gui/screens/settings/input_menu/input_line/scripts/ActionList.gd" type="Script" id=2]
[ext_resource path="res://gui/screens/settings/fonts/MinimalPixel v2.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://gui/screens/settings/scripts/SettingsScreen.gd" type="Script" id=4]
[ext_resource path="res://gui/screens/settings/scripts/KeySelectMenu.gd" type="Script" id=5]
[ext_resource path="res://gui/screens/settings/assets/1.png" type="Texture" id=6]
[ext_resource path="res://gui/screens/settings/assets/2.png" type="Texture" id=7]
[ext_resource path="res://gui/screens/settings/assets/3.png" type="Texture" id=8]
[ext_resource path="res://gui/screens/settings/assets/4.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 5
outline_color = Color( 0.0431373, 0.141176, 0.278431, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=11]
size = 32
outline_size = 4
outline_color = Color( 0.0431373, 0.141176, 0.278431, 1 )
font_data = ExtResource( 3 )

[sub_resource type="GDScript" id=1]
script/source = "extends OptionButton

func initialize(input_mapper):
	for profile_index in input_mapper.profiles:
		var profile_name = input_mapper.profiles[profile_index].capitalize()
		add_item(profile_name, profile_index)
# warning-ignore:return_value_discarded
	self.connect(\"item_selected\", input_mapper, \"_on_ProfilesMenu_item_selected\")
"

[sub_resource type="DynamicFont" id=3]
size = 44
outline_size = 5
outline_color = Color( 0.0431373, 0.141176, 0.278431, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 44
outline_size = 5
outline_color = Color( 0.0431373, 0.141176, 0.278431, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 44
outline_size = 5
outline_color = Color( 0.0431373, 0.141176, 0.278431, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 32
outline_size = 5
outline_color = Color( 0.0431373, 0.141176, 0.278431, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.647059, 0.843137, 0.909804, 1 )
border_width_bottom = 10
border_color = Color( 0.341176, 0.423529, 0.737255, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 20.0
expand_margin_right = 20.0
expand_margin_top = 15.0
expand_margin_bottom = 15.0

[sub_resource type="StyleBoxFlat" id=9]
content_margin_top = 5.0
bg_color = Color( 0.647059, 0.843137, 0.909804, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 20.0
expand_margin_right = 20.0
expand_margin_top = 10.0
expand_margin_bottom = 15.0

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.341176, 0.423529, 0.737255, 1 )
border_width_bottom = 10
border_color = Color( 0.647059, 0.843137, 0.909804, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 20.0
expand_margin_right = 20.0
expand_margin_top = 15.0
expand_margin_bottom = 15.0

[sub_resource type="DynamicFont" id=10]
size = 74
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=12]
size = 32
outline_size = 5
outline_color = Color( 0.0431373, 0.141176, 0.278431, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.647059, 0.843137, 0.909804, 1 )
border_width_bottom = 10
border_color = Color( 0.341176, 0.423529, 0.737255, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 20.0
expand_margin_right = 20.0
expand_margin_top = 15.0
expand_margin_bottom = 15.0

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.647059, 0.843137, 0.909804, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 20.0
expand_margin_right = 20.0
expand_margin_top = 10.0
expand_margin_bottom = 15.0

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.341176, 0.423529, 0.737255, 1 )
border_width_bottom = 10
border_color = Color( 0.647059, 0.843137, 0.909804, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 20.0
expand_margin_right = 20.0
expand_margin_top = 15.0
expand_margin_bottom = 15.0

[node name="SettingsScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0, 0, 0, 0.309804 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="InputMapper" parent="." instance=ExtResource( 1 )]

[node name="Column" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -590.0
margin_top = -335.0
margin_right = 590.0
margin_bottom = 335.0
custom_constants/separation = 25

[node name="Title" type="Label" parent="Column"]
margin_right = 1180.0
margin_bottom = 64.0
custom_colors/font_color = Color( 0.647059, 0.843137, 0.909804, 1 )
custom_fonts/font = SubResource( 2 )
text = "Controls Menu"
align = 1
valign = 1

[node name="ProfilesMenu" type="OptionButton" parent="Column"]
margin_left = 447.0
margin_top = 89.0
margin_right = 732.0
margin_bottom = 127.0
focus_mode = 0
size_flags_horizontal = 4
custom_colors/font_color = Color( 0.176471, 0.545098, 0.839216, 1 )
custom_colors/font_color_hover = Color( 0.713726, 1, 0.0862745, 1 )
custom_fonts/font = SubResource( 11 )
toggle_mode = false
text = "ASDASDASDASD"
flat = true
align = 1
icon_align = 1
script = SubResource( 1 )

[node name="Header" type="HBoxContainer" parent="Column"]
margin_top = 152.0
margin_right = 1180.0
margin_bottom = 196.0

[node name="Action" type="Label" parent="Column/Header"]
margin_right = 390.0
margin_bottom = 44.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "ACTION"
uppercase = true

[node name="Control" type="Label" parent="Column/Header"]
margin_left = 394.0
margin_right = 785.0
margin_bottom = 44.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "CONTROL"
align = 1

[node name="Button" type="Label" parent="Column/Header"]
margin_left = 993.0
margin_right = 1180.0
margin_bottom = 44.0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 5 )
text = "CHANGE"

[node name="ScrollContainer" type="ScrollContainer" parent="Column"]
margin_top = 221.0
margin_right = 1180.0
margin_bottom = 603.0
size_flags_vertical = 3

[node name="ActionList" type="VBoxContainer" parent="Column/ScrollContainer"]
margin_right = 1180.0
margin_bottom = 382.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30
script = ExtResource( 2 )

[node name="Button" type="Button" parent="Column"]
margin_left = 535.0
margin_top = 628.0
margin_right = 645.0
margin_bottom = 670.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_colors/font_color_focus = Color( 0.647059, 0.843137, 0.909804, 1 )
custom_colors/font_color = Color( 0.647059, 0.843137, 0.909804, 1 )
custom_colors/font_color_hover = Color( 0.341176, 0.423529, 0.737255, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 8 )
text = "CLOSE"

[node name="KeySelectMenu" type="Panel" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.678431 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Label" type="Label" parent="KeySelectMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -956.0
margin_top = -75.0
margin_right = 957.0
margin_bottom = 76.0
size_flags_horizontal = 5
custom_colors/font_color_shadow = Color( 0.0980392, 0.215686, 0.427451, 1 )
custom_constants/shadow_offset_x = 10
custom_constants/shadow_offset_y = 10
custom_fonts/font = SubResource( 10 )
text = "PRESS A KEY...
"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="Volume" type="Button" parent="."]
margin_left = 1074.0
margin_top = 41.0
margin_right = 1222.0
margin_bottom = 91.0
size_flags_horizontal = 0
size_flags_vertical = 7
custom_fonts/font = SubResource( 12 )
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
text = "VOLUME"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Layer1" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Layer1"]
scale = Vector2( 3.33333, 3.33333 )
texture = ExtResource( 6 )
centered = false

[node name="Layer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/Layer2"]
position = Vector2( -5.00003, -7.00003 )
scale = Vector2( 3.34549, 3.33642 )
texture = ExtResource( 7 )
centered = false

[node name="Layer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite3" type="Sprite" parent="ParallaxBackground/Layer3"]
scale = Vector2( 3.33333, 3.33333 )
texture = ExtResource( 8 )
centered = false

[node name="Layer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite4" type="Sprite" parent="ParallaxBackground/Layer4"]
scale = Vector2( 3.33333, 3.33333 )
texture = ExtResource( 9 )
centered = false

[connection signal="pressed" from="Column/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Volume" to="." method="_on_Volume_pressed"]
